--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,3 +10,9 @@
 @import "footer";
 @import "responsive";
 @import "faq";
+*{
+  ::selection{
+    background: $primary-color;
+    color: $white;
+  }
+}
