--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -30,13 +30,13 @@
 
   .product-image {
     position: relative;
-    height: 250px;
-    overflow: hidden;
+    height: 550px;
+    // overflow: hidden;
 
     img {
-      width: 100%;
       height: 100%;
-      object-fit: cover;
+      width: 100%;
+      // object-fit: cover;
       transition: $transition-medium;
     }
 
